@@ -1,14 +1,22 @@
 --- #YAML:1.0
-name:                Module-LocalBuild
-version:             1.012
-abstract:            Detect module changes and rebuild into local area
-license:             ~
-author:              
+name:               Module-LocalBuild
+version:            1.013
+abstract:           Detect module changes and rebuild into local area
+author:
     - Wilson Snyder <wsnyder@wsnyder.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Pod::Usage:                    0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Pod::Usage:  1.34
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
