@@ -9,7 +9,7 @@ use IO::Dir;
 use strict;
 use vars qw ($VERSION @Ignore_Files_Regexps);
 
-$VERSION = '1.012';
+$VERSION = '1.013';
 
 @Ignore_Files_Regexps = (qr!/CVS$!,
 			 qr!.git$!,
